[package]
name = "cloudmon-plugin-loadbalancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = { version = "0.4", features = ["std", "serde"] }
regex = "1"
reqwest = { version = "0.11.9", features=["blocking", "default-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
signal-hook = { version = "0.3.13" }
statsd = "^0.13.1"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
