[package]
name = "cloudmon-plugin-loadbalancer"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "~0.9"
log = { version = "~0.4", features = ["std", "serde"] }
regex = "~1.5"
reqwest = { version = "~0.11", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "~1.0", features = ["derive"] }
serde_yaml = "~0.8"
signal-hook = { version = "~0.3" }
statsd = "~0.13"

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.3"
